--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/theme_extra.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css" />
-  <link href="doc_theme/extra.css" rel="stylesheet" />
+  <link href="extra.css" rel="stylesheet" />
   
   <script>
     // Current page data
@@ -329,7 +329,13 @@
 <ol>
 <li>สร้างไฟล์ใหม่และใช้ชื่อ <code>Hello.ino</code> จากนั้น copy โปรกแกรมไปไว้ในไฟล์ที่สร้าง:</li>
 </ol>
-<div class="codehilite"><pre><span></span><code><span class="kt">void</span> <span class="nf">setup</span><span class="p">()</span> <span class="p">{</span>
+<table class="codehilitetable"><tr><td class="linenos"><div class="linenodiv"><pre>1
+2
+3
+4
+5
+6
+7</pre></div></td><td class="code"><div class="codehilite"><pre><span></span><code><span class="kt">void</span> <span class="nf">setup</span><span class="p">()</span> <span class="p">{</span>
   <span class="n">Serial</span><span class="p">.</span><span class="n">begin</span><span class="p">(</span><span class="mi">9600</span><span class="p">);</span> <span class="c1">// initializes the serial port with a baud rate of 9600</span>
 <span class="p">}</span>
 <span class="kt">void</span> <span class="nf">loop</span><span class="p">()</span> <span class="p">{</span>
@@ -337,7 +343,7 @@
   <span class="n">delay</span><span class="p">(</span><span class="mi">1000</span><span class="p">);</span> <span class="c1">//delay of 1 second</span>
 <span class="p">}</span>
 </code></pre></div>
-
+</td></tr></table>
 
 <ol>
 <li>ที่มุมด้านซ้ายบนของ Arduino IDE จะมีปุ่ม 2 ปุ่มได้แก่ <strong>Verify and Upload</strong>  ปุ่มแรก (✓) กดเพื่อคอมไพล์ หลังจากที่คอมไพล์ผ่านแล้วให้กดปุ่มอัพโหลดโปรแกรม (→)</li>
@@ -379,7 +385,18 @@
         - เปิดโปรแกรม Arduino IDE <br/>
         - Copy โปรแกรมต่อไปนี้ เลือก Verify เพื่อตรวจสอบว่าทำงานได้หรือไม่ มีข้อผิดพลาดหรือไม่ จากนั้น Upload โปรแกรมลงที่บอร์ด</li>
 </ul>
-<div class="codehilite"><pre><span></span><code><span class="c1">//LED Blink</span>
+<table class="codehilitetable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
+ 2
+ 3
+ 4
+ 5
+ 6
+ 7
+ 8
+ 9
+10
+11
+12</pre></div></td><td class="code"><div class="codehilite"><pre><span></span><code><span class="c1">//LED Blink</span>
 <span class="c1">//The LED will turn on for one second and then turn off for one second</span>
 <span class="kt">int</span> <span class="n">ledPin</span> <span class="o">=</span> <span class="mi">4</span><span class="p">;</span>
 <span class="kt">void</span> <span class="nf">setup</span><span class="p">()</span> <span class="p">{</span>
@@ -392,20 +409,19 @@
   <span class="n">delay</span><span class="p">(</span><span class="mi">1000</span><span class="p">);</span>
   <span class="p">}</span>
 </code></pre></div>
-
+</td></tr></table>
 
 <ul>
 <li><font size=5;font color=#314B9F >อธิบายการทำงานของโค้ด</font></li>
 </ul>
-<div class="codehilite"><pre><span></span><code><span class="n">setup</span><span class="p">(){</span>
+<table class="codehilitetable"><tr><td class="linenos"><div class="linenodiv"><pre>1
+2</pre></div></td><td class="code"><div class="codehilite"><pre><span></span><code><span class="n">setup</span><span class="p">(){</span>
 <span class="p">}</span>
 </code></pre></div>
-
+</td></tr></table>
 
 <p>ทุกครั้งที่เริ่มต้นการทำงาน sketch ฟังก์ชั่น <code>setup()</code> จะถูกเรียกเพื่อทำงานก่อนเป็นลำดับแรก  ซึ่งจะรวบรวมส่วนที่เป็นการกำหนดค่าตัวแปร และค่าเริ่มต้นต่างๆ  การกำหนดโหมดการทำงานของ pin ที่ใช้  การเรียกใช้ Library เป็นต้น  ฟังก์ชั่น <code>setup()</code> จะทำงานเมื่อเริ่มต้นเพียงครั้งเดียวหลังจากที่จ่ายไฟเลี้ยงให้วงจร หรือ กดปุ่ม reset บนตัวบอร์ด</p>
-<p>Lorem ipsum[^1] dolor sit amet, consectetur adipiscing elit[^2].</p>
-<p>[^1]: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-[^2]: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<p>Lorem ipsum<sup id="fnref:1"><a class="footnote-ref" href="#fn:1">1</a></sup> dolor sit amet, consectetur adipiscing elit<sup id="fnref:2"><a class="footnote-ref" href="#fn:2">2</a></sup>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
@@ -414,11 +430,27 @@
 <li><code>mkdocs -h</code> - Print help message and exit.</li>
 </ul>
 <h2 id="project-layout">Project layout แผนภาพโครงการ</h2>
-<div class="codehilite"><pre><span></span><code><span class="err">mkdocs.yml    # The configuration file.</span>
+<table class="codehilitetable"><tr><td class="linenos"><div class="linenodiv"><pre>1
+2
+3
+4</pre></div></td><td class="code"><div class="codehilite"><pre><span></span><code><span class="err">mkdocs.yml    # The configuration file.</span>
 <span class="err">docs/</span>
 <span class="err">    index.md  # The documentation homepage.</span>
 <span class="err">    ...       # Other markdown pages, images and other files.</span>
 </code></pre></div>
+</td></tr></table>
+
+<div class="footnote">
+<hr />
+<ol>
+<li id="fn:1">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&#160;<a class="footnote-backref" href="#fnref:1" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+</li>
+<li id="fn:2">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&#160;<a class="footnote-backref" href="#fnref:2" title="Jump back to footnote 2 in the text">&#8617;</a></p>
+</li>
+</ol>
+</div>
               
             </div>
           </div>
@@ -452,7 +484,7 @@
     <script>var base_url = '.';</script>
     <script src="js/theme.js" defer></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.6.0/clipboard.min.js" defer></script>
-      <script src="doc_theme/extra.js" defer></script>
+      <script src="extra.js" defer></script>
       <script src="search/main.js" defer></script>
     <script defer>
         window.onload = function () {
@@ -465,5 +497,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-06-03 17:34:13.823840+00:00
+Build Date UTC : 2020-06-03 17:51:09.410268+00:00
 -->
